1999-08-03  Mikhael Goikhman  <migo@homemail.com>

	* FvwmWharf/FvwmWharf.c: MaxSwallow limited to 64x64
	* FvwmWharf/FvwmWharf.1: SwallowModule example and '&' in Exec's

1999-08-01  Dominik Vogt  <dominik_vogt@gmx.de>

	* FvwmTaskBar/FvwmTaskBar.c (RedrawWindow): changed 'iconify -1' to
	'iconify off'

	* FvwmWharf/FvwmWharf.1: some clean up

	* FvwmIconBox/FvwmIconBox.1: .fvwmrc -> .fvwm2rc

	* FvwmWharf/FvwmWharf.c (swallow): applied maxswallow fix by
	Ben Winslow

1999-07-29  Brad Giaccio

	* FvwmPager/*: added colorset support

1999-07-28  Hippo

	* FvwmWinList/*: added colorset support

1999-07-22  Brad Giaccio

	* FvwmForm/*: added colorset support
	* FvwmScroll/*: added colorset support

1999-07-21  Dan Espen  <dane@mk.telcordia.com>

	* FvwmBanner/FvwmBanner.1: General cleanups to the man page.

1999-07-10  Mikhael Goikhman  <migo@homemail.com>

	* FvwmForm/FormFvwmRootCursor.pl:
	* FvwmForm/FormFvwmRootCursor.:
	Initial cursor is now checked, more colors, cursor names are 5 in row
	to help people with 800x600 screens.

	* FvwmTaskBar/Mallocs.[hc]:
	* FvwmBacker/Mallocs.[hc]:
	Added const to char * in UpdateString().

1999-07-10  Chris Rankin <rankinc@zipworld.com.au>

	* FvwmTaskBar/FvwmTaskBar.c
	Changed SIGALRM handler to use sigaction-type semantics; replaced
    MotionNotify event-mask for XSendEvent() with EnterNotify since
    no clients accept MotionNotify events (hence no tool-tips!). Removed
    lingering debug-fprintfs and rewrote EndLessLoop() so that it only
    uses the single select() statement. (Modelled after FvwmWinList.)
    Added "void" to a lot of empty prototypes, and added GNU "noreturn"
    attribute to DeadPipe(). Concentrated all calls to alarm() within the
    SetAlarm() and ClearAlarm() functions.

1999-07-10  Tomas Ogren  <stric@ing.umu.se>

	* FvwmConsole/FvwmConsole.c: s/socklen_t/size_t/ - socklen_t doesn't
	exist on neither Solaris 2.6 nor IRIX 6.5.4f
	* FvwmGtk/expand.c: Initialize a variable to NULL
